src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Complete_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://sf2.knowledgebin.com/kb/jsp/SF_find.jsp?go=formList.jsp&amp;sfIDs=&quot; +  Id +&quot;,&quot;+ Contact.Id +&quot;,&quot;+  Account.Id + &quot;&amp;SFserver=&quot; +  $Api.Partner_Server_URL_310 + &quot;&amp;SFsession=&quot; + $Api.Session_ID, &apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER3__Advocate__c</fullName>
        <label>Advocate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mark Ashton</fullName>
                </value>
                <value>
                    <fullName>Eric Stephens</fullName>
                </value>
                <value>
                    <fullName>Cory Newey</fullName>
                </value>
                <value>
                    <fullName>Carey Carlan</fullName>
                </value>
                <value>
                    <fullName>Marty Harvey</fullName>
                </value>
                <value>
                    <fullName>Chuck Lane</fullName>
                </value>
                <value>
                    <fullName>Andrew Nerney</fullName>
                </value>
                <value>
                    <fullName>Joseph Giddens</fullName>
                </value>
                <value>
                    <fullName>Emir Escalante</fullName>
                </value>
                <value>
                    <fullName>Jay Johnson</fullName>
                </value>
                <value>
                    <fullName>Ken Schumacher</fullName>
                </value>
                <value>
                    <fullName>Chelsea Creanshaw</fullName>
                </value>
                <value>
                    <fullName>David Weaver</fullName>
                </value>
                <value>
                    <fullName>Andy Meadows</fullName>
                </value>
                <value>
                    <fullName>Patrick Childers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER3__Completion__c</fullName>
        <label>Completion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Ended__c</fullName>
        <description>When this case work did finish.</description>
        <inlineHelpText>When this case work did finish.</inlineHelpText>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Ends__c</fullName>
        <description>When this case work is planned to finish.</description>
        <inlineHelpText>When this case work is planned to finish.</inlineHelpText>
        <label>Ends</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Hours_Estimated__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Hours Estimated</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Imported_External_Id__c</fullName>
        <description>The Id that the task had when it was imported.</description>
        <inlineHelpText>The Id that the task had when it was imported.</inlineHelpText>
        <label>Imported External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Project_Manager__c</fullName>
        <label>Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mark Ashton</fullName>
                </value>
                <value>
                    <fullName>Eric Stephens</fullName>
                </value>
                <value>
                    <fullName>Cory Newey</fullName>
                </value>
                <value>
                    <fullName>Carey Carlan</fullName>
                </value>
                <value>
                    <fullName>Marty Harvey</fullName>
                </value>
                <value>
                    <fullName>Chuck Lane</fullName>
                </value>
                <value>
                    <fullName>Andrew Nerney</fullName>
                </value>
                <value>
                    <fullName>Joseph Giddens</fullName>
                </value>
                <value>
                    <fullName>Emir Escalante</fullName>
                </value>
                <value>
                    <fullName>Jay Johnson</fullName>
                </value>
                <value>
                    <fullName>Ken Schumacher</fullName>
                </value>
                <value>
                    <fullName>Chelsea Creanshaw</fullName>
                </value>
                <value>
                    <fullName>David Weaver</fullName>
                </value>
                <value>
                    <fullName>Andy Meadows</fullName>
                </value>
                <value>
                    <fullName>Patrick Childers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER3__Project_Mgr_Projected_Hours__c</fullName>
        <label>Project Mgr Projected Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Projected_Advocate_Hours__c</fullName>
        <label>Projected Advocate Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Projected_Tech_Hours__c</fullName>
        <label>Projected Tech Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Requires_Cases__c</fullName>
        <description>Holds the comma-delimited list of Case Ids that are required by the current Case (must be completed before this case is completed).</description>
        <inlineHelpText>Holds the comma-delimited list of Case Ids that are required by the current Case (must be completed before this case is completed).</inlineHelpText>
        <label>Requires Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Requires__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This case should not be started until the one it requires is completed.</description>
        <inlineHelpText>This case should not be started until the one it requires is completed.</inlineHelpText>
        <label>Requires</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Dependents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Started__c</fullName>
        <description>When this case work did start.</description>
        <inlineHelpText>When this case work did start.</inlineHelpText>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Starts__c</fullName>
        <description>When this case work is planned to start.</description>
        <inlineHelpText>When this case work is planned to start.</inlineHelpText>
        <label>Starts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__Technician__c</fullName>
        <label>Technician</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mark Ashton</fullName>
                </value>
                <value>
                    <fullName>Eric Stephens</fullName>
                </value>
                <value>
                    <fullName>Cory Newey</fullName>
                </value>
                <value>
                    <fullName>Carey Carlan</fullName>
                </value>
                <value>
                    <fullName>Marty Harvey</fullName>
                </value>
                <value>
                    <fullName>Chuck Lane</fullName>
                </value>
                <value>
                    <fullName>Andrew Nerney</fullName>
                </value>
                <value>
                    <fullName>Joseph Giddens</fullName>
                </value>
                <value>
                    <fullName>Emir Escalante</fullName>
                </value>
                <value>
                    <fullName>Jay Johnson</fullName>
                </value>
                <value>
                    <fullName>Ken Schumacher</fullName>
                </value>
                <value>
                    <fullName>Chelsea Creanshaw</fullName>
                </value>
                <value>
                    <fullName>David Weaver</fullName>
                </value>
                <value>
                    <fullName>Andy Meadows</fullName>
                </value>
                <value>
                    <fullName>Patrick Childers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER3__formData__c</fullName>
        <label>formData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__nextStep__c</fullName>
        <description>Extracted from checklist each time that it is Saved</description>
        <inlineHelpText>Extracted from checklist each time that it is Saved</inlineHelpText>
        <label>Next Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER3__zChild_Order__c</fullName>
        <description>The order that children nodes are displayed under this parent node in Gantt</description>
        <label>Child Order</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxType__c</fullName>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__latestFax__c</fullName>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__outboundFaxTemplate__c</fullName>
        <label>Outbound Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__producedId__c</fullName>
        <label>producedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__receivedId__c</fullName>
        <label>receivedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxAt__c</fullName>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxStatus__c</fullName>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxTo__c</fullName>
        <label>Sent Document To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zPassport__c</fullName>
        <formula>IMAGE(&quot;https://zp20.zpaper.com/kb/jsp/zPassport.jsp?code=HI&amp;SFsession=&quot;+$Api.Session_ID+&quot;&amp;SFuser=&quot;+$User.Username+&quot;&amp;SFserver=&quot;+ $Api.Partner_Server_URL_310 , &quot;logged in  $User.Email&quot; , 25, 25)</formula>
        <label>zPassport</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>